--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@opentui/core": "^0.1.72"
+    "@opentui/core": "^0.1.72",
+    "opentuitui": "^0.2.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
